--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="testjava.js"></script>
+    </head>
 
-</head>
+    
+    <body>
+        <nav>
+            <li>
+                <a href="Accueil.html">Accueil</a>
+            </li>
+            <li>
+                <a href="Cours.html">Cours</a>
+                    <ul>
+                        <li><a href="Cours_general.html">Cours général </a> </li>
+                        <li><a href="Cours_verre.html">Cours verre </a></li>
+                    </ul>
+            </li>
+            <li>
+                <a href="Quizz.html">Quizz</a>
+            </li>
+            <li>
+                <a href="CV.html">CV</a>
+                <ul>
+                    <li><a href="CV_Missolo.html">CV missolo</a></li>
+                    <li><a href="CV_Desousa.html">CV desousa</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">plus </a>
+                <ul>
+                    <li><a href="Liens.html">Liens </a>
+                        <ul> 
+                            <li><a href="https://fr.wikipedia.org/wiki/Verrerie_de_laboratoire"> Lien wikipedia</a> </li>
+                            <li><a href="http://thedoc777.free.fr/pageverre.htm">Lien sur le site du Lycée Mermoz</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="Contact.html">nous contacter</a></li>
+                </ul>
+            </li>
+        </nav>
+    
 
-<body>
 
 
-
-</body>
+    </body>
 
 
 </html>
