Fond avec barre

--- a/index.html
+++ b/index.html
@@ -3,50 +3,64 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script type="text/javascript" src="testjava.js"></script>
+        <script src="testjava.js"></script>
+        <title>Accueil</title>
     </head>
 
     
     <body>
         <nav>
-            <li>
-                <a href="Accueil.html">Accueil</a>
-            </li>
-            <li>
-                <a href="Cours.html">Cours</a>
-                    <ul>
-                        <li><a href="Cours_general.html">Cours général </a> </li>
-                        <li><a href="Cours_verre.html">Cours verre </a></li>
-                    </ul>
-            </li>
-            <li>
-                <a href="Quizz.html">Quizz</a>
-            </li>
-            <li>
-                <a href="CV.html">CV</a>
-                <ul>
-                    <li><a href="CV_Missolo.html">CV missolo</a></li>
-                    <li><a href="CV_Desousa.html">CV desousa</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">plus </a>
-                <ul>
-                    <li><a href="Liens.html">Liens </a>
-                        <ul> 
-                            <li><a href="https://fr.wikipedia.org/wiki/Verrerie_de_laboratoire"> Lien wikipedia</a> </li>
-                            <li><a href="http://thedoc777.free.fr/pageverre.htm">Lien sur le site du Lycée Mermoz</a></li>
+            <ul>
+                <li>
+                    <a href="index.html">Accueil</a>
+                </li>
+                <li>
+                    <a href="Cours.html">Cours</a>
+                        <ul>
+                            <li><a href="Cours_general.html">Cours général </a> </li>
+                            <li><a href="Cours_verre.html">Cours verre </a></li>
                         </ul>
-                    </li>
-                    <li><a href="Contact.html">nous contacter</a></li>
-                </ul>
-            </li>
+                </li>
+                <li>
+                    <a href="Quizz.html">Quizz</a>
+                </li>
+                <li>
+                    <a href="CV.html">CV</a>
+                    <ul>
+                        <li><a href="CV_Missolo.html">CV missolo</a></li>
+                        <li><a href="CV_Desousa.html">CV desousa</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">plus </a>
+                    <ul>
+                        <li><a href="Liens.html">Liens </a>
+                            <ul> 
+                                <li><a href="https://fr.wikipedia.org/wiki/Verrerie_de_laboratoire"> Lien wikipedia</a> </li>
+                                <li><a href="http://thedoc777.free.fr/pageverre.htm">Lycée Mermoz</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="Contact.html">nous contacter</a></li>
+                    </ul>
+                </li>
+            </ul>
         </nav>
     
 
 
 
     </body>
+
+<!---
+        <p>
+    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="CSS Valide !" />
+        </a>
+    </p>
+-->
+
 
 
 </html>
