--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <li><a href="http://thedoc777.free.fr/pageverre.htm">Lycée Mermoz</a></li>
                             </ul>
                         </li>
-                        <li><a href="Contact.html">nous contacter</a></li>
+                        <li><a href="Contact.html">Nous contacter</a></li>
                     </ul>
                 </li>
             </ul>
