--- a/Quizz.html
+++ b/Quizz.html
@@ -4,24 +4,123 @@
     <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
-    <title> Titre du document </title> 
+    <title> LabExpert - Quizz </title> 
 
     </head>
 
     <body>
 
-        <article height="70%" width="75%"> 
+        <article class="quizz"> 
 
-                <img border="1px" src="./vials-1781316.jpg" title="Choississez une réponse" height="50%" width="35%" />
+		<!-- 10 questions de Quizz avec une barre de progresion-->
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
                 <form action="./formulaire_1.html" method="get" name="case">
                     <input type="checkbox" name="Becher" /> Un Becher<br />
                     <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
                     <input type="checkbox" name="Recip" /> Un Récipient<br />
                     <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                    </form> <p />
+                </form> <p />
+		<progress max="100" value="10" form="form-id">10%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="20" form="form-id">20%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="30" form="form-id">30%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="40" form="form-id">40%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
 
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="50" form="form-id">50%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="60" form="form-id">60%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="70" form="form-id">70%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="80" form="form-id">80%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="90" form="form-id">90%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+                <form action="./formulaire_1.html" method="get" name="case">
+                    <input type="checkbox" name="Becher" /> Un Becher<br />
+                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
+                    <input type="checkbox" name="Recip" /> Un Récipient<br />
+                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
+                </form> <p />
+		<progress max="100" value="100" form="form-id">100%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+
+    <input type="submit" value="Envoyez vos réponses" />
     </article>
     </body>
 
