--- a/Quizz.html
+++ b/Quizz.html
@@ -5,6 +5,23 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <title> LabExpert - Quizz </title> 
+    <script type="text/javascript">
+
+        var score = 0;
+       /* var S=0;
+        var y = 0;
+
+        function z() {
+            if ( y == 1){S = S+1};
+            var y = 0;
+            return S; 
+            }*/
+
+        function Affscore() {
+            alert("Vous avez un score de: " + score + "/10");
+            }
+
+    </script>
 
     </head>
 
@@ -12,116 +29,122 @@
 
         <article class="quizz"> 
 
-		<!-- 10 questions de Quizz avec une barre de progresion-->
+            <form action="./formulaire_1.html" method="get" name="formulaire1">
+
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="10" form="form-id">10%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                    <input type="radio" value="Becher" name="q1" onClick="y = 1" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q1" onClick="y = 0"/> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q1" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q1" /> Aucune des réponses précédentes<br />
+            
+                 <p />
+		        <progress max="100" value="10" form="form-id">10%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="20" form="form-id">20%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                    <input type="radio" value="Becher" name="q2" onClick="score = score +1"/> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q2"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q2" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q2" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="20" form="form-id">20%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
                                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="30" form="form-id">30%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                    <input type="radio" value="Becher" name="q3" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q3"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q3" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q3" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="30" form="form-id">30%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="40" form="form-id">40%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="50" form="form-id">50%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+                    <input type="radio" value="Becher" name="q4" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q4"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q4" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q4" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="40" form="form-id">40%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="60" form="form-id">60%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="70" form="form-id">70%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+                    <input type="radio" value="Becher" name="q5" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q5"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q5" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q5" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="50" form="form-id">50%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="80" form="form-id">80%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                    <input type="radio" value="Becher" name="q6" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q6"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q6" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q6" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="60" form="form-id">60%</progress><p /> 
+
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+
+                    <input type="radio" value="Becher" name="q7" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q7"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q7" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q7" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="70" form="form-id">70%</progress><p /> 
 
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="90" form="form-id">90%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                    <input type="radio" value="Becher" name="q8" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q8"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q8" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q8" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="80" form="form-id">80%</progress><p /> 
 
 
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
-                <form action="./formulaire_1.html" method="get" name="case">
-                    <input type="checkbox" name="Becher" /> Un Becher<br />
-                    <input type="checkbox" name="Erlen" /> Un Erlenmeyer<br />
-                    <input type="checkbox" name="Recip" /> Un Récipient<br />
-                    <input type="checkbox" name="Aucune" /> Aucune des réponses précédentes<br />
-                </form> <p />
-		<progress max="100" value="100" form="form-id">100%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
+
+                    <input type="radio" value="Becher" name="q9" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q9"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q9" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q9" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="90" form="form-id">90%</progress><p />
 
 
-    <input type="submit" value="Envoyez vos réponses" />
-    </article>
+                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
+                <h1> Q1 De quel instrument s'agit-il ? </h1>
+
+                    <input type="radio" value="Becher" name="q10" /> Un Becher<br />
+                    <input type="radio" value="Erlen" name="q10"  /> Un Erlenmeyer<br />
+                    <input type="radio" value="Recip" name="q10" /> Un Récipient<br />
+                    <input type="radio" value="Aucune" name="q10" /> Aucune des réponses précédentes<br />
+                <p />
+		        <progress max="100" value="100" form="form-id">100%</progress><p /> 
+                </form>
+
+                <input type="submit" value="Envoyez vos réponses" onClick="Affscore()" />
+
+
+        </article>
+
     </body>
 
 </html>
