--- a/Quizz.html
+++ b/Quizz.html
@@ -7,18 +7,27 @@
     <title> LabExpert - Quizz </title> 
     <script type="text/javascript">
 
-        var score = 0;
-       /* var S=0;
-        var y = 0;
-
-        function z() {
-            if ( y == 1){S = S+1};
-            var y = 0;
-            return S; 
-            }*/
-
         function Affscore() {
-            alert("Vous avez un score de: " + score + "/10");
+	//document.getElementById("affichscore").innerHTML="aaa";
+            var score = 0;
+            var reponse = document.getElementsByTagName("SECTION");
+            var nbrep=reponse.length;
+            var i = 0;
+            while(i< nbrep) {
+                var nbinput= reponse[i].getElementsByTagName("INPUT");
+                var Tinput = nbinput.length; 
+                i++;
+               	var j=0;
+                while(j<Tinput){
+                    if( (nbinput[j].type == "radio") && (nbinput[j].checked) ) {
+                        score = score + parseInt(nbinput[j].value,10);
+
+                        }
+                    j++;
+                    
+                }              
+                }
+	document.getElementById("affichscore").innerHTML=score;
             }
 
     </script>
@@ -31,117 +40,23 @@
 
             <form action="./formulaire_1.html" method="get" name="formulaire1">
 
-
+                <section id="1">
                 <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
                 <h1> Q1 De quel instrument s'agit-il ? </h1>
 
-                    <input type="radio" value="Becher" name="q1" onClick="y = 1" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q1" onClick="y = 0"/> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q1" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q1" /> Aucune des réponses précédentes<br />
+                    <input type="radio" value="1" name="q1" /> Un Becher<br />
+                    <input type="radio" value="0" name="q1" /> Un Erlenmeyer<br />
+                    <input type="radio" value="0" name="q1"  /> Un Récipient<br />
+                    <input type="radio" value="0" name="q1"  /> Aucune des réponses précédentes<br />
             
                  <p />
 		        <progress max="100" value="10" form="form-id">10%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
 
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q2" onClick="score = score +1"/> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q2"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q2" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q2" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="20" form="form-id">20%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
-
-                                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q3" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q3"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q3" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q3" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="30" form="form-id">30%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q4" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q4"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q4" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q4" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="40" form="form-id">40%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
-
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q5" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q5"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q5" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q5" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="50" form="form-id">50%</progress><p /> <!-- On rajoute du texte pour les navigateurs non compatibles-->
-
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q6" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q6"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q6" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q6" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="60" form="form-id">60%</progress><p /> 
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q7" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q7"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q7" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q7" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="70" form="form-id">70%</progress><p /> 
-
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q8" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q8"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q8" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q8" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="80" form="form-id">80%</progress><p /> 
-
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q9" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q9"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q9" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q9" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="90" form="form-id">90%</progress><p />
-
-
-                <img class="imqz" src="./vials-1781316.jpg" title="Choississez une réponse";  />
-                <h1> Q1 De quel instrument s'agit-il ? </h1>
-
-                    <input type="radio" value="Becher" name="q10" /> Un Becher<br />
-                    <input type="radio" value="Erlen" name="q10"  /> Un Erlenmeyer<br />
-                    <input type="radio" value="Recip" name="q10" /> Un Récipient<br />
-                    <input type="radio" value="Aucune" name="q10" /> Aucune des réponses précédentes<br />
-                <p />
-		        <progress max="100" value="100" form="form-id">100%</progress><p /> 
+		</section>
+                <input type="button" value="Envoyez vos réponses" onclick="Affscore()" />
+		<p> truc </p>
+                <p id = "affichscore"> </p>
                 </form>
-
-                <input type="submit" value="Envoyez vos réponses" onClick="Affscore()" />
-
 
         </article>
 
